if(APPLE)
	message("Linking against Mac Vicon Library")
	set(vicon_lib_name "ViconDataStreamSDK_CPP")
	set(vicon_debug_name "DebugServices")
elseif(UNIX)
	if( CMAKE_SYSTEM_PROCESSOR STREQUAL "x64" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "amd64" )
	  message("Linking against 64-bit Linux Vicon library")
	  set(vicon_lib_name "ViconDataStreamSDK_CPP_x64")
	elseif(CMAKE_SYSTEM_PROCESSOR STREQUAL "x86" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "i686")
	  message("Linking against 32-bit Linux Vicon library")
	  set(vicon_lib_name "ViconDataStreamSDK_CPP_x86")
	else()
	  message("\n--- Don't have a precompiled ViconDataStreamSDK for ${CMAKE_SYSTEM_PROCESSOR}")
	  message("--- Not building the vicon driver\n")
	  return()
	endif()
else()
	message("\n--- Don't have a precompiled ViconDataStreamSDK for this system")
	message("--- Not building the vicon driver\n")
	return()
endif()

#copy over/install the vicon sdk shared object
if(APPLE)
	configure_file(${CMAKE_CURRENT_SOURCE_DIR}/lib${vicon_lib_name}.dylib ${CMAKE_BINARY_DIR}/lib/lib${vicon_lib_name}.dylib COPYONLY)
	configure_file(${CMAKE_CURRENT_SOURCE_DIR}/lib${vicon_lib_name}.dylib ${CMAKE_INSTALL_PREFIX}/lib/lib${vicon_lib_name}.dylib COPYONLY)
	configure_file(${CMAKE_CURRENT_SOURCE_DIR}/lib${vicon_debug_name}.dylib ${CMAKE_BINARY_DIR}/lib/lib${vicon_debug_name}.dylib COPYONLY)
	configure_file(${CMAKE_CURRENT_SOURCE_DIR}/lib${vicon_debug_name}.dylib ${CMAKE_INSTALL_PREFIX}/lib/lib${vicon_debug_name}.dylib COPYONLY)
	#Not sure why this doesn't work...
	#install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/lib${vicon_lib_name}.dylib DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
	message("Putting stuff in ${CMAKE_INSTALL_PREFIX}/lib")
elseif(UNIX)
	configure_file(${CMAKE_CURRENT_SOURCE_DIR}/lib${vicon_lib_name}.so ${CMAKE_BINARY_DIR}/lib/lib${vicon_lib_name}.so COPYONLY)
	install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/lib${vicon_lib_name}.so DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
endif()

# Create an executable program vicon-client
add_executable(vicon-client vicon_client.cpp)
target_link_libraries(vicon-client -l${vicon_lib_name})
pods_use_pkg_config_packages(vicon-client lcm lcmtypes_vicon)

# make executable public
pods_install_executables(vicon-client)
